fix: minor bugs in application startup
