# src/api/http/headers.ts
@@ -1,0 +1,3 @@
+export enum Headers {
+    CONTENT_LOCATION = "Content-Location"
+}
